
syntax = "proto3";

package Replication;
option go_package = "proto/proto";

message User {
    string ClientName = 1;
}

message PlaceBid {
    string ClientName = 2;
    int64 BidAmount = 3;
}

message Acknowledgement {
    string AcknowledgementMessage = 1;
}

message Outcome {
    string RepyMessage = 1;
}

message Message {
    string content = 2;
}

message Close {}

service Replication {
    rpc ConnectToServer(User) returns (stream Message);
    rpc Bid(PlaceBid) returns (stream Acknowledgement);
    rpc Result(Close) returns (stream Outcome);
    
}